# stateful-chatbot-langchain

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  memory-management.md
steps/step1/: README.md  stateful_chatbot_step1.py
steps/step2/: README.md  stateful_chatbot_step2.py
steps/step3/: README.md  stateful_chatbot_step3.py
steps/step4/: README.md  stateful_chatbot_step4.py
